--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-	<h1>hello</h1>
+	<h1>hello brother</h1>
 
 <nav id="nav-1" class="navbar navbar-light" style="background-color: #e3f2fd;">
  <h1 class="display-12">India Covid Tracker</h1>
