--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Black Ops One' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Cabin Sketch' rel='stylesheet'>
-  <script src="/Javascripts/display.js"></script>
+  <script src="public/javascripts/display.js"></script>
   <script src="/Javascripts/line_chart.js"></script>
 	
    <script src="/Javascripts/line_chart_confirmed.js"></script>
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-	<h1>hello brother</h1>
+	<h1>hello brother ki maka nakasaki</h1>
 
 <nav id="nav-1" class="navbar navbar-light" style="background-color: #e3f2fd;">
  <h1 class="display-12">India Covid Tracker</h1>
