--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Black Ops One' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Cabin Sketch' rel='stylesheet'>
   <script src="public/javascripts/display.js"></script>
-  <script src="/Javascripts/line_chart.js"></script>
+  <script src="public/javascripts/line_chart.js"></script>
 	
-   <script src="/Javascripts/line_chart_confirmed.js"></script>
-	<script src="/Javascripts/line_chart_active.js"></script>
-	<script src="/Javascripts/line_chart_deceased.js"></script>
-	<script src="/Javascripts/ChatBot.js"></script>
+   <script src="public/javascripts/line_chart_confirmed.js"></script>
+	<script src="public/javascripts/line_chart_active.js"></script>
+	<script src="public/javascripts/line_chart_deceased.js"></script>
+	<script src="public/javascripts/ChatBot.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-	<h1>hello brother ki maka nakasaki</h1>
+	<h1>hello brother ki maka lauda lesson nakasaki</h1>
 
 <nav id="nav-1" class="navbar navbar-light" style="background-color: #e3f2fd;">
  <h1 class="display-12">India Covid Tracker</h1>
