--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-	<h1>hello brother ki maka lauda lesson nakasaki</h1>
+	<h1>testing 1</h1>
 
 <nav id="nav-1" class="navbar navbar-light" style="background-color: #e3f2fd;">
  <h1 class="display-12">India Covid Tracker</h1>
@@ -46,7 +46,7 @@
           </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="/district_wise">
+        <a class="nav-link" href="hello.html">
 		 <i class="fa fa-book fa-fw"></i> DistricWise
 		  </a>
      
