--- a/faq.html
+++ b/faq.html
@@ -119,13 +119,13 @@ p {
           </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="/district_wise">
+        <a class="nav-link" href="tabbable.html">
      <i class="fa fa-book fa-fw"></i> DistricWise
       </a>
      
   </li>
     <li class="nav-item active">
-        <a class="nav-link" href="/helpline">
+        <a class="nav-link" href="help.html">
      <i class="fa fa-pencil fa-fw"></i> Help
       </a>
      
