--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      
 	</li>
 		<li class="nav-item ">
-        <a class="nav-link" href="/helpline">
+        <a class="nav-link" href="help.html">
 		 <i class="fa fa-pencil fa-fw"></i> Help
 		  </a>
      
