--- a/help.html
+++ b/help.html
@@ -125,7 +125,7 @@ p {
      
   </li>
     <li class="nav-item active">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="#">
      <i class="fa fa-pencil fa-fw"></i> Help
       </a>
      
