--- a/tabbable.html
+++ b/tabbable.html
@@ -204,7 +204,7 @@ p {
           </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="tabbable.html">
+        <a class="nav-link" href="#">
 		 <i class="fa fa-book fa-fw"></i> DistricWise
 			 <span class="sr-only">(current)</span>
 		  </a>
