--- a/tabbable.html
+++ b/tabbable.html
@@ -211,7 +211,7 @@ p {
      
 	</li>
 		<li class="nav-item ">
-        <a class="nav-link" href="faq.html">
+        <a class="nav-link" href="help.html">
 		 <i class="fa fa-pencil fa-fw"></i> Help
 		  </a>
      
