--- a/tabbable.html
+++ b/tabbable.html
@@ -204,14 +204,14 @@ p {
           </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/district_wise">
+        <a class="nav-link" href="#">
 		 <i class="fa fa-book fa-fw"></i> DistricWise
 			 <span class="sr-only">(current)</span>
 		  </a>
      
 	</li>
 		<li class="nav-item ">
-        <a class="nav-link" href="/helpline">
+        <a class="nav-link" href="help.html">
 		 <i class="fa fa-pencil fa-fw"></i> Help
 		  </a>
      
