--- a/tabbable.html
+++ b/tabbable.html
@@ -269,11 +269,15 @@ p {
     </select> 
   </div>
 </div>
-
+<br>
+<br>
 
 <div class="container">
   <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
   <div class="row">
+	    <div class="col-12 col-md-3 col-sm-3">
+		  
+	  </div>
     <div class="col-12 col-md-6 col-sm-6">
     
     <table align="center" id="myTable" cellspacing="0" cellpadding="0" class="table table-striped table-bordered" align="left" >
