--- a/help.html
+++ b/help.html
@@ -18,6 +18,12 @@
 .pb-60 {
   padding-bottom: 60px;
 }
+		#p1 {
+		font-size:16px;
+		padding-top:15px;
+		padding-left:80px;
+		font-family: 'Cabin Sketch';
+	}	
 .pt-60 {
   padding-top: 60px;
 }
@@ -131,6 +137,9 @@ p {
      
   </li>
       </ul>
+	   <p id="p1">
+		  Developed By Abdul Samad
+	  </p>
   </div>
 </nav>
 <section class="services pt-60 pb-60" id="services">
