--- a/tabbable.html
+++ b/tabbable.html
@@ -101,7 +101,12 @@ function show(){
   height: 100px;
   
   }
-  
+  	#p1 {
+		font-size:16px;
+		padding-top:15px;
+		padding-left:80px;
+		font-family: 'Cabin Sketch';
+	}	
 
 
 #nav-1{
@@ -217,6 +222,9 @@ p {
      
 	</li>
       </ul>
+	   <p id="p1">
+		  Developed By Abdul Samad
+	  </p>
   </div>
 </nav>
 
