--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
 <meta charset="ISO-8859-1">
 	
 <title>Corona Stats India</title>
+<style>
+#p1 {
+		font-size:16px;
+		padding-top:15px;
+		padding-left:80px;
+		font-family: 'Cabin Sketch';
+	}	
 
+</style>
 </head>
 <body>
 
